# dart-game-backend

./: .gitignore  Cargo.toml  README.md
.docker/: .env  Dockerfile  docker-compose.yml
database/migration/src/: lib.rs  m20250209_151006_create_game_table.rs  m20250209_191720_create_sets_table.rs  m20250209_191729_create_legs_table.rs  m20250209_201729_create_throw_table.rs
src/: app.rs  channels.rs  db.rs  lib.rs  main.rs
src/api/: api_errors.rs  game.rs  mod.rs  throw.rs
src/api/games/: mod.rs  play.rs  throw.rs  utils.rs
src/api/games/sse/: games.rs
src/api/ws/: game.rs
src/db/: games.rs  legs.rs  mod.rs  set.rs
src/entities/: games.rs  legs.rs  mod.rs  prelude.rs  sets.rs  throws.rs
src/models/: game.rs  leg.rs  mod.rs  set.rs  throw.rs
