[package]
name = "dart-game-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.8.1", features = ["macros"] }
futures-util = "0.3.31"
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.217"
tokio = {version = "1.43.0", features = ["full"]}
tower-http = { version = "0.6.2", features = ["timeout", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
migration = { path = "database/migration" }
sea-orm-migration = "1.1.4"
sqlx = "0.8.3"
